--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 
     <header>
         <div class="container">
-            <h1></h1>
-            <p>PhD Candidate in Applied Linguistics</p>
+            <h1>Yunhui</h1>
+            <p>PhD Candidate in Second Language Acquisition</p>
         </div>
     </header>
 
