Delete about me section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jane Doe - Applied Linguistics PhD Candidate</title>
+    <title>Yunhui - Applied Linguistics PhD Candidate</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -133,8 +133,6 @@
 
     <section id="about">
         <div class="container">
-            <h2 class="section-title">About Me</h2>
-            <img src="https://via.placeholder.com/150" alt="Jane Doe" class="profile-img">
             <div class="about-content">
                 <div class="content-left">
                     <h3>Academic Background</h3>
