Move University Tecahing part to the top

--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
         <div class="container">
             <div class="about-content">
                 <div class="content-left">
-                    <h3>Academic Background</h3>
+                    <h3>University Teaching</h3>
+                    <p>At the University of [Your University], I have had the pleasure of teaching the following
+                        courses:</p>
                     <ul>
-                        <li><strong>PhD in Applied Linguistics</strong> - University of [Your University], [Year] -
-                            Present</li>
-                        <li><strong>MA in Applied Linguistics</strong> - [Previous University], [Year]</li>
-                        <li><strong>BA in English Language and Literature</strong> - [Undergraduate University], [Year]
-                        </li>
+                        <li><strong>KOR101:</strong> Elementary Korean I</li>
+                        <li><strong>ENG205:</strong> Introduction to Linguistics for Anglophone Students</li>
                     </ul>
-                </div>
+                    <p>My teaching philosophy centers on creating an inclusive and interactive learning environment
+                        where students feel empowered to engage with the material and each other.</p>                </div>
                 <div class="content-right">
                     <h3>Biography</h3>
                     <p>I am a dedicated PhD candidate at the University of [Your University], specializing in Applied
