Put back about me section with yunhui pic

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
 
     <section id="about">
         <div class="container">
+            <h2 class="section-title">About Me</h2>
+            <img src="yunhee.jpeg" alt="Yunhui" class="profile-img">
             <div class="about-content">
                 <div class="content-left">
                     <h3>University Teaching</h3>
