add university name

--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
                 </div>
                 <div class="content-right-two-third">
                     <h3>Biography</h3>
-                    <p>I am a dedicated PhD candidate at the University of [Your University], specializing in Applied
+                    <p>I am a dedicated PhD candidate at the University of Wisconsin-Madison, specializing in Applied
                         Linguistics. My research focuses on the intersection of language, technology, and pedagogy. I am
                         passionate about understanding how digital tools can enhance language acquisition, particularly
                         in the context of second language learning. My academic journey has equipped me with a strong
                         theoretical foundation and practical research skills.</p>
                     <h3>Research Interests</h3>
                     <ul>
-                        <li><strong>PhD in Second Language Acquisition</strong> - University of [Your University],
+                        <li><strong>PhD in Second Language Acquisition</strong> - University of Wisconsin-Madison, USA
                             [Year] - Present</li>
                         <li><strong>MA in Applied Linguistics</strong> - [Previous University], [Year]</li>
                         <li><strong>BA in Korean Language and Literature</strong> - [Undergraduate University], [Year]
