--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <header>
         <div class="container">
-            <h1>Yunhui</h1>
+            <h1>Yunhui Jeong</h1>
             <p>PhD Candidate in Second Language Acquisition</p>
         </div>
     </header>
